Updating Bitbucket changes first before my change

--- a/docker/webterm/public/index.html
+++ b/docker/webterm/public/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Wetty - The WebTTY Terminal Emulator</title>
-    <script src="/test/wetty/hterm_all.js"></script>
-    <script src="/test/wetty/socket.io/socket.io.js"></script>
-    <script src="/test/wetty/wetty.js"></script>
+    <script src="/%WETTY_PASSWORD%/wetty/hterm_all.js"></script>
+    <script src="/%WETTY_PASSWORD%/wetty/socket.io/socket.io.js"></script>
+    <script src="/%WETTY_PASSWORD%/wetty/wetty.js"></script>
     <style>
         html,
         body {
